--- a/node/client/package.json
+++ b/node/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "plotly.js": "^1.37.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-native": "^0.55.3",
+    "react-plotly.js": "^2.2.0",
     "react-scripts": "1.1.4",
     "recharts": "^1.0.0-beta.10"
   },
